--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "messageslite",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://mikolajjkrol.github.io/messageslite",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
